fixed mobile nav visiblity issue

--- a/app/assets/scss/modules/_mobile-nav.scss
+++ b/app/assets/scss/modules/_mobile-nav.scss
@@ -8,7 +8,7 @@
   background-color: rgba(0,0,0,.8);
   text-align:center;
   opacity:0;
-  visibility:none;
+  visibility:hidden;
   transition:opacity .3s, visibility .3s, height .3s;
   overflow:hidden;
 
